<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context = ".Activity.MainMenu"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lessons"
            android:title="@string/first_nav_name"
            android:icon="@drawable/ic_class_black_24dp"
            />
        <item
            android:id="@+id/nav_notifications"
            android:title="@string/two_nav_name"
            android:icon="@drawable/notifications"/>
        <item
            android:id="@+id/nav_notes"
            android:title="@string/three_nav_name"
            android:icon="@drawable/notas"/>
        <item
            android:id="@+id/nav_teachers"
            android:title="@string/four_nav_name"
            android:icon="@drawable/teachers"/>
        <item
            android:id="@+id/nav_communities"
            android:title="@string/five_nav_name"
            android:icon="@drawable/communities"/>
    </group>

</menu>