<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.PersonalDataFragment">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_letter"

        tools:context=".PersonalDataActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_layaout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="310dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_gender">

                    <RadioButton
                        android:id="@+id/radioButton_male"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/str_male" />

                    <RadioButton
                        android:id="@+id/radioButton_female"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/str_female" />
                </RadioGroup>

                <TextView
                    android:id="@+id/textView_gender"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/str_gender"
                    android:textColor="@color/white_letter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout_description" />

                <ImageView
                    android:id="@+id/imageView_selector"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:clickable="true"
                    android:scaleType="centerInside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_person_outline_black_24dp"

                    />

                <!--android:onClick="clickImageSelector"-->

                <TextView
                    android:id="@+id/textView_name"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/str_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.56"
                    app:layout_constraintStart_toEndOf="@+id/imageView_selector"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_surname"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/str_surname"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.56"
                    app:layout_constraintStart_toEndOf="@+id/imageView_selector"
                    app:layout_constraintTop_toBottomOf="@+id/textView_name" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout_description"
                    android:layout_width="310dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_surname">

                    <EditText
                        android:id="@+id/EditText_description"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/str_description"

                        android:textColorHint="@color/white_letter"
                        android:inputType="textMultiLine"/>

                        android:inputType="textMultiLine"
                        android:maxLines="4" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textView_hobbies"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/str_hobbies"
                    android:textColor="@color/white_letter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.146"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <LinearLayout
                    android:id="@+id/linearLayout_hobbies"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_hobbies">

                    <CheckBox
                        android:id="@+id/checkBox_first_hobbie"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/str_java" />

                    <CheckBox
                        android:id="@+id/checkBox_second_hobbie"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/str_c" />

                    <CheckBox
                        android:id="@+id/checkBox_third_hobbie"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/str_c_mas" />
                </LinearLayout>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.901"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout_hobbies">
                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/btn_save"
                    android:layout_width="61dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_selector"
                     />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="49dp"
                        android:layout_gravity="center"
                        android:elevation="16dp"
                        android:text="OK"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:textSize="28dp" />
                </FrameLayout>

            </android.support.constraint.ConstraintLayout>
        </ScrollView>


    </android.support.constraint.ConstraintLayout>


</FrameLayout>