<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    android:background="@color/backgroung_screen">

    <ImageView
        android:layout_width="@dimen/image_profile_width"
        android:layout_height="@dimen/image_profile_height"
        android:src="@drawable/logoutad"
        android:id="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_margin_top"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="174dp"
        android:layout_above="@id/btn_login"
        android:layout_below="@id/imgLogo"
        android:layout_marginStart="8dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:padding="30dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@color/background_layaout"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_email"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/str_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:text="@string/str_login"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_login"
        android:enabled="false"
        android:background="@drawable/button_selector"
        android:textColor="@color/white_letter"
        android:onClick="onLoginAction"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.503"/>

</android.support.constraint.ConstraintLayout>